# cdd-tooling

./: .gitignore  CDD_ANALYSIS_AND_IMPROVEMENTS.md  CHANGELOG.md  README.md  ROADMAP.md  SPEC.md  pyproject.toml
src/cdd_tooling/: __init__.py  assertions.py  cli.py  coverage.py  globbing.py  jsonpath.py  runner.py
src/cdd_tooling/analyze/: __init__.py  html.py  pdf.py  source.py
src/cdd_tooling/executors/: __init__.py  base.py  python_exec.py  registry.py  sclang_exec.py  shell_exec.py  static_exec.py
src/cdd_tooling/isolate/: __init__.py
src/cdd_tooling/lint/: __init__.py
src/cdd_tooling/paths/: __init__.py
src/cdd_tooling/spec/: SPEC.md  __init__.py
src/cdd_tooling/test/: __init__.py
tests/: test_analyze_source.py
tests/fixtures/contracts/: calculator.py  calculator.yaml  project.yaml
