[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cdd-tooling"
version = "0.1.5"
description = "Reference implementation of Contract-Driven Development tooling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gareth Dyne" }]
keywords = ["contracts", "testing", "validation", "cdd", "tooling"]
dependencies = [
  "pyyaml>=6.0.1",
  "jsonschema>=4.22.0",
  "referencing>=0.35.1",
  "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]
pdf = [
  "pymupdf>=1.23.0",
]
sclang = []

[project.scripts]
cdd = "cdd_tooling.cli:main"
contract-lint = "cdd_tooling.cli:contract_lint"
contract-test = "cdd_tooling.cli:contract_test"
contract-coverage = "cdd_tooling.cli:contract_coverage"

[project.entry-points."cdd.executors"]
python = "cdd_tooling.executors.python_exec:PythonExecutor"
shell = "cdd_tooling.executors.shell_exec:ShellExecutor"
static = "cdd_tooling.executors.static_exec:StaticExecutor"
sclang = "cdd_tooling.executors.sclang_exec:SclangExecutor"

[project.urls]
Homepage = "https://github.com/thegdyne/cdd-tooling"
Documentation = "https://github.com/thegdyne/cdd"

[tool.hatch.build.targets.wheel]
packages = ["src/cdd_tooling"]

[tool.hatch.build.targets.wheel.force-include]
"src/cdd_tooling/spec/SPEC.md" = "cdd_tooling/spec/SPEC.md"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

